tests/machine/x/st/string_prefix_slice.out
Object: 'forest' error: Invalid index 0: index out of range
SystemExceptions.IndexOutOfRange(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.IndexOutOfRange class>>signalOn:withIndex: (SysExcept.st:660)
String(Object)>>checkIndexableBounds: (Object.st:796)
String>>at: (String.st:312)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/string_prefix_slice.st:6)
Object: 'desert' error: Invalid index 0: index out of range
SystemExceptions.IndexOutOfRange(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.IndexOutOfRange class>>signalOn:withIndex: (SysExcept.st:660)
String(Object)>>checkIndexableBounds: (Object.st:796)
String>>at: (String.st:312)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/string_prefix_slice.st:8)