tests/machine/x/st/string_prefix_slice.st
" Generated by Mochi compiler v0.10.25 on 2025-07-13T05:07:59Z
"
| prefix s1 s2 |
prefix := 'fore'.
s1 := 'forest'.
Transcript show: (((s1 at: 0) = prefix)) printString; cr.
s2 := 'desert'.
Transcript show: (((s2 at: 0) = prefix)) printString; cr.
